[JBIDE-8478] added fallback to instance name in case no alias is present
git-svn-id: https://svn.jboss.org/repos/jbosstools/trunk@29316 a97e2381-89e5-4abb-bab3-167db6db766c

--- a/deltacloud/plugins/org.jboss.tools.deltacloud.integration/ChangeLog
+++ b/deltacloud/plugins/org.jboss.tools.deltacloud.integration/ChangeLog
@@ -1,3 +1,8 @@
+2011-02-24  André Dietisheim  <André Dietisheim@adietisheim-thinkpad>
+
+	* src/org/jboss/tools/deltacloud/integration/rse/util/RSEUtils.java (createConnectionName): 
+	[JBIDE-8478] added fallback to instance name in case no alias is present
+
 2011-02-18  André Dietisheim  <André Dietisheim@adietisheim-thinkpad>
 
 	* src/org/jboss/tools/deltacloud/integration/wizard/RSEandASWizardPage.java 
