--- a/common/plugins/org.jboss.tools.common.el.core/src/org/jboss/tools/common/el/core/messages.properties
+++ b/common/plugins/org.jboss.tools.common.el.core/src/org/jboss/tools/common/el/core/messages.properties
@@ -16,9 +16,11 @@ PrimitiveValueTokenDescription_ArgMustResolveToIntegerOrString=Argument must res
 PrimitiveValueTokenDescription_Name=Primitive
 StringTokenDescription_Name=String
 WhiteSpaceTokenDescription_Name=Whitespace
-EL_RENAME_PROCESSOR_OUT_OF_SYNC_FILE=Cannot change file. File ''{0}'' is not in sync.
-EL_RENAME_PROCESSOR_ERROR_PHANTOM_FILE=Cannot change phantom file: ''{0}''.
+EL_RENAME_PROCESSOR_OUT_OF_SYNC_PROJECT=Cannot change file(s). Project ''{0}'' is not in sync.
 EL_RENAME_PROCESSOR_ERROR_READ_ONLY_FILE=Cannot change read-only file: ''{0}''.
+EL_RENAME_PROCESSOR_QUESTION_DIALOG_TITLE=Read-only File Encountered
+EL_RENAME_PROCESSOR_QUESTION_DIALOG_MESSAGE=File ''{0}'' is read-only. Do you wish to make it writable?
+
 RENAME_EL_VARIABLE_PROCESSOR_TITLE=Rename EL Variable
 RENAME_MESSAGE_PROPERTY_PROCESSOR_TITLE=Rename Resource Bundle Message
 RENAME_EL_VARIABLE_PROCESSOR_CAN_NOT_FIND_EL_VARIABLE=Can not find EL Variable: ''{0}''.
