git-svn-id: https://svn.jboss.org/repos/jbosstools/trunk@29352 a97e2381-89e5-4abb-bab3-167db6db766c

--- a/bpel/plugins/org.eclipse.bpel.ui/src/org/eclipse/bpel/ui/messages.properties
+++ b/bpel/plugins/org.eclipse.bpel.ui/src/org/eclipse/bpel/ui/messages.properties
@@ -129,10 +129,7 @@ BPELPreferencePage_WSIL_EnterDescription = <enter description>
 BPELPreferencePage_WSIL_EnterLocation = <enter location>
 #
 # This has \n for a reason. The wrapping in the widget works, but not as expected.
-BPELPreferencePage_WSIL_Description = \
-The document above contains links to other WSIL documents shown below.\n\
-You can add or remove WSIL links to/from the above document.\n\
-The result will be shown in the WSIL browser of the editor.
+BPELPreferencePage_WSIL_Description = The document above contains links to other WSIL documents shown below.\nYou can add or remove WSIL links to/from the above document.\nThe result will be shown in the WSIL browser of the editor.
 #
 BPELUIRegistry_Expression_language_editors_must_provide_expressionLanguage_and_class__8=Expression language editors must provide expressionLanguage and class.
 BPELUtil__unknown_URI__54=<unknown URI>
@@ -686,3 +683,7 @@ EditModelClient_wsdl_load_error=Unable to load the WSDL file {0}\n It may be cor
 
 EditModelClient_delete_error_title=File Delete Error
 EditModelClient_delete_error_message=Unable to delete the file. See Error Log for more information.
+
+Make_Process_Abstract_Title=Warning
+Make_Process_Abstract_Message=Opaque activities are only used in Abstract Processes\n\
+    Would you like to convert this process to make it Abstract?
