--- a/deltacloud/plugins/org.jboss.tools.deltacloud.ui/ChangeLog
+++ b/deltacloud/plugins/org.jboss.tools.deltacloud.ui/ChangeLog
@@ -1,3 +1,11 @@
+2011-03-09  André Dietisheim  <André Dietisheim@adietisheim-thinkpad>
+
+	* src/org/jboss/tools/deltacloud/ui/views/cloud/property/CVPropertySheetPage.java (selectionChanged): 
+	(addPropertyChangeListener): 
+	(removePropertyChangeListener): 
+	(cloudPropertyListener): 
+	[JBIDE-7523] listening to changes in DeltaCloud and refreshing properties view
+
 2011-03-08  André Dietisheim  <André Dietisheim@adietisheim-thinkpad>
 
 	* src/org/jboss/tools/internal/deltacloud/ui/wizards/FindImageWizard.java (addPages): 
