--- a/deltacloud/tests/org.jboss.tools.deltacloud.test/ChangeLog
+++ b/deltacloud/tests/org.jboss.tools.deltacloud.test/ChangeLog
@@ -1,3 +1,7 @@
+2011-03-12  André Dietisheim  <André Dietisheim@adietisheim-thinkpad>
+
+	[JBIDE-8562] extracted client tests to their own plugin
+
 2011-01-11  André Dietisheim  <André Dietisheim@adietisheim-thinkpad>
 
 	* src/org/jboss/tools/internal/deltacloud/test/core/client/ImageDomUnmarshallingTest.java: 
