[JBIDE-8584] ensured updates to widgets happens in display thread
git-svn-id: https://svn.jboss.org/repos/jbosstools/trunk@29759 a97e2381-89e5-4abb-bab3-167db6db766c

--- a/deltacloud/plugins/org.jboss.tools.deltacloud.ui/ChangeLog
+++ b/deltacloud/plugins/org.jboss.tools.deltacloud.ui/ChangeLog
@@ -1,3 +1,9 @@
+2011-03-14  André Dietisheim  <André Dietisheim@adietisheim-thinkpad>
+
+	* src/org/jboss/tools/deltacloud/ui/views/cloudelements/AbstractCloudElementTableView.java (updateCloudSelector): 
+	* src/org/jboss/tools/deltacloud/ui/views/cloud/CloudItem.java (propertyChange): 
+	[JBIDE-8584] ensured updates to widgets happens in display thread
+
 2011-03-09  André Dietisheim  <André Dietisheim@adietisheim-thinkpad>
 
 	* src/org/jboss/tools/deltacloud/ui/views/cloud/property/CVPropertySheetPage.java (selectionChanged): 
