https://issues.jboss.org/browse/JBIDE-7004 , Base version of the Externalize All Strings dialog was implemented.
git-svn-id: https://svn.jboss.org/repos/jbosstools/trunk@29793 a97e2381-89e5-4abb-bab3-167db6db766c

--- a/jst/plugins/org.jboss.tools.jst.jsp/src/org/jboss/tools/jst/jsp/messages/messages.properties
+++ b/jst/plugins/org.jboss.tools.jst.jsp/src/org/jboss/tools/jst/jsp/messages/messages.properties
@@ -109,7 +109,8 @@ HIDE_SELECTION_BAR=Hide selection bar
 
 # Externalize Strings Dialog
 EXTERNALIZE_STRINGS=Externalize strings
-EXTERNALIZE_STRINGS_POPUP_MENU_TITLE=Externalize strings...
+EXTERNALIZE_ALL_STRINGS_POPUP_MENU_TITLE=Externalize all strings...
+EXTERNALIZE_STRINGS_POPUP_MENU_TITLE=Externalize selected string...
 EXTERNALIZE_STRINGS_DIALOG_TITLE=Externalize Strings
 EXTERNALIZE_STRINGS_DIALOG_DESCRIPTION=Externalize your strings via properties file
 EXTERNALIZE_STRINGS_DIALOG_TEXT_STRING=Text string:
