[JBIDE-8590] * adding listeners only if they're not added yet * removing propertyChangeListeners on disposal * registering listeners for all props only (was: several for each property)
git-svn-id: https://svn.jboss.org/repos/jbosstools/trunk@29817 a97e2381-89e5-4abb-bab3-167db6db766c

--- a/deltacloud/plugins/org.jboss.tools.deltacloud.core/ChangeLog
+++ b/deltacloud/plugins/org.jboss.tools.deltacloud.core/ChangeLog
@@ -1,3 +1,11 @@
+2011-03-16  André Dietisheim  <André Dietisheim@adietisheim-thinkpad>
+
+	* src/org/jboss/tools/internal/deltacloud/core/observable/ObservablePojo.java 
+	(contains): 
+	(addPropertyChangeListener): 
+	(addPropertyChangeListener): 
+	[JBIDE-8590] adding listeners only if they're not added yet
+
 2011-03-11  André Dietisheim  <André Dietisheim@adietisheim-thinkpad>
 
 	* src/org/jboss/tools/deltacloud/core/DeltaCloudInstance.java (performAction): 
