--- a/deltacloud/plugins/org.jboss.tools.deltacloud.ui/ChangeLog
+++ b/deltacloud/plugins/org.jboss.tools.deltacloud.ui/ChangeLog
@@ -1,5 +1,10 @@
 2011-03-16  André Dietisheim  <André Dietisheim@adietisheim-thinkpad>
 
+	* plugin.xml: 
+	* src/org/jboss/tools/deltacloud/ui/commands/FilterImagesHandler.java (execute): 
+	* src/org/jboss/tools/deltacloud/ui/commands/FilterInstancesHandler.java (execute): 
+	[JBIDE-8594] enabled handlers when image-/instance-view is active or cloud is selected in cloud viewer,
+	changed handlers to be able to adapt image-/instance-view to DeltaCloud instance 
 	* src/org/jboss/tools/deltacloud/ui/views/cloudelements/InstanceView.java: 
 	* src/org/jboss/tools/deltacloud/ui/views/cloudelements/ImageView.java: 
 	* src/org/jboss/tools/deltacloud/ui/views/cloudelements/AbstractCloudElementTableView.java 
