https://issues.jboss.org/browse/JBIDE-8601 Display error dialog instead of ignoring hyperlink clicks
git-svn-id: https://svn.jboss.org/repos/jbosstools/trunk@29864 a97e2381-89e5-4abb-bab3-167db6db766c

--- a/bpel/plugins/org.eclipse.bpel.ui/src/org/eclipse/bpel/ui/messages.properties
+++ b/bpel/plugins/org.eclipse.bpel.ui/src/org/eclipse/bpel/ui/messages.properties
@@ -132,10 +132,14 @@ BPELPreferencePage_WSIL_EnterLocation = <enter location>
 BPELPreferencePage_WSIL_Description = The document above contains links to other WSIL documents shown below.\nYou can add or remove WSIL links to/from the above document.\nThe result will be shown in the WSIL browser of the editor.
 #
 BPELUIRegistry_Expression_language_editors_must_provide_expressionLanguage_and_class__8=Expression language editors must provide expressionLanguage and class.
+BPELUtil__Error=Error
 BPELUtil__unknown_URI__54=<unknown URI>
 BPELUtil_HiddenSequence_2=HiddenSequence
 BPELUtil_Sequence_1=Sequence
 BPELUtil_NCName=Not a valid NCName
+BPELUtil_NoEditorForNullObject=Cannot open editor for null object
+BPELUtil_NoEditorForObject=Cannot open editor for object of type {0}
+
 BPELVariableAdapter_Variable_1=Variable
 BPELXYLayoutEditPolicy_Add_Part_1=Add Part
 BPELXYLayoutEditPolicy_Move_Part_2=Move Part
