--- a/deltacloud/plugins/org.jboss.tools.deltacloud.ui/ChangeLog
+++ b/deltacloud/plugins/org.jboss.tools.deltacloud.ui/ChangeLog
@@ -1,3 +1,13 @@
+2011-03-21  André Dietisheim  <André Dietisheim@adietisheim-thinkpad>
+
+2011-03-21  André Dietisheim  <André Dietisheim@adietisheim-thinkpad>
+
+	* src/org/jboss/tools/deltacloud/ui/commands/CopyCVPropertySheetPageEntryHandler.java: 
+	* src/org/jboss/tools/deltacloud/ui/views/cloud/property/CVPropertySheetPage.java
+	* plugin.xml:
+	[JBIDE-8416] implemented custom property sheet page so that elements copied (to the clipboard) 
+	from it do not contain the label  
+
 2011-03-16  André Dietisheim  <André Dietisheim@adietisheim-thinkpad>
 
 	* plugin.xml: 
