[JBIDE-8295] asking user to confirm instance stop now
git-svn-id: https://svn.jboss.org/repos/jbosstools/branches/jbosstools-3.2.x@29975 a97e2381-89e5-4abb-bab3-167db6db766c

--- a/deltacloud/plugins/org.jboss.tools.deltacloud.ui/ChangeLog
+++ b/deltacloud/plugins/org.jboss.tools.deltacloud.ui/ChangeLog
@@ -1,5 +1,9 @@
 2011-03-23  André Dietisheim  <André Dietisheim@adietisheim-thinkpad>
 
+	* src/org/jboss/tools/deltacloud/ui/views/CVMessages.properties: 
+	* src/org/jboss/tools/deltacloud/ui/commands/StopInstanceHandler.java (doStopInstance):
+	[JBIDE-8295] asking user to confirm instance stop now 
+	
 	* src/org/jboss/tools/internal/deltacloud/ui/wizards/WizardMessages.properties: 
 	* src/org/jboss/tools/internal/deltacloud/ui/wizards/NewCloudConnectionWizard.java (createCloud): 
 	* src/org/jboss/tools/internal/deltacloud/ui/wizards/EditCloudConnectionWizard.java (editCloud):
