[JBIDE-8622] corrected retrieval of available actions for instances
git-svn-id: https://svn.jboss.org/repos/jbosstools/trunk@29990 a97e2381-89e5-4abb-bab3-167db6db766c

--- a/deltacloud/plugins/org.jboss.tools.deltacloud.core/ChangeLog
+++ b/deltacloud/plugins/org.jboss.tools.deltacloud.core/ChangeLog
@@ -1,3 +1,9 @@
+2011-03-24  André Dietisheim  <André Dietisheim@adietisheim-thinkpad>
+
+	* src/org/jboss/tools/deltacloud/core/DeltaCloudResourceAction.java (getByName): 
+	* src/org/jboss/tools/deltacloud/core/DeltaCloudInstance.java (getActions): 
+	[JBIDE-8622] corrected retrieval of available actions for instances
+
 2011-03-16  André Dietisheim  <André Dietisheim@adietisheim-thinkpad>
 
 	* src/org/jboss/tools/internal/deltacloud/core/observable/ObservablePojo.java 
