[JBIDE-8635] removed http client and replaced by urlConnection
git-svn-id: https://svn.jboss.org/repos/jbosstools/trunk@30101 a97e2381-89e5-4abb-bab3-167db6db766c

--- a/deltacloud/plugins/org.jboss.tools.deltacloud.client/ChangeLog
+++ b/deltacloud/plugins/org.jboss.tools.deltacloud.client/ChangeLog
@@ -1,3 +1,10 @@
+2011-03-29  André Dietisheim  <André Dietisheim@adietisheim-thinkpad>
+
+	* src/org/jboss/tools/deltacloud/core/client/DeltaCloudClientImpl.java 
+	(request): 
+	(DeltaCloudClientImpl): 
+	[JBIDE-8635] removed http client and replaced by urlConnection
+
 2011-03-11  André Dietisheim  <André Dietisheim@adietisheim-thinkpad>
 
 	* src/org/jboss/tools/deltacloud/core/client/StateAware.java: 
