[JBIDE-8290] delete is now only available on cloud items in the cloud viewer
git-svn-id: https://svn.jboss.org/repos/jbosstools/trunk@30110 a97e2381-89e5-4abb-bab3-167db6db766c

--- a/deltacloud/plugins/org.jboss.tools.deltacloud.ui/ChangeLog
+++ b/deltacloud/plugins/org.jboss.tools.deltacloud.ui/ChangeLog
@@ -1,3 +1,11 @@
+2011-03-29  André Dietisheim  <André Dietisheim@adietisheim-thinkpad>
+
+	* plugin.xml: 
+	* src/org/jboss/tools/deltacloud/ui/commands/DeleteCloudHandler.java 
+	(getSelectedClouds): 
+	(getFirstSelectedCloud):
+	[JBIDE-8290] delete is now only available on cloud items in the cloud viewer 	 
+
 2011-03-25  André Dietisheim  <André Dietisheim@adietisheim-thinkpad>
 
 	* src/org/jboss/tools/deltacloud/ui/views/cloudelements/TableViewerColumnComparator.java 
