--- a/deltacloud/plugins/org.jboss.tools.deltacloud.ui/ChangeLog
+++ b/deltacloud/plugins/org.jboss.tools.deltacloud.ui/ChangeLog
@@ -1,5 +1,8 @@
 2011-03-31  André Dietisheim  <André Dietisheim@adietisheim-thinkpad>
 
+	* src/org/jboss/tools/deltacloud/ui/commands/CreateInstanceFromAnyImageHandler.java: 
+	* plugin.xml: 
+	[JBIDE-8659] enabled "Launch instance" in instance view even if no instance is selected
 	* plugin.xml: 
 	[JBIDE-8655] added "Launch instance" to context menu and toolbar in instance view
 
