[JBIDE-8662] removed visibility rule for "Launch instance" in cloud viewer
git-svn-id: https://svn.jboss.org/repos/jbosstools/trunk@30216 a97e2381-89e5-4abb-bab3-167db6db766c

--- a/deltacloud/plugins/org.jboss.tools.deltacloud.ui/ChangeLog
+++ b/deltacloud/plugins/org.jboss.tools.deltacloud.ui/ChangeLog
@@ -1,5 +1,7 @@
 2011-04-01  André Dietisheim  <André Dietisheim@adietisheim-thinkpad>
 
+	* plugin.xml: 
+	[JBIDE-8662] removed visibility rule for "Launch instance" in cloud viewer
 	* src/org/jboss/tools/internal/deltacloud/ui/wizards/CloudConnectionPageModel.java 
 	(prependHttp): 
 	(CloudConnectionPageModel): 
