--- a/deltacloud/plugins/org.jboss.tools.deltacloud.core/ChangeLog
+++ b/deltacloud/plugins/org.jboss.tools.deltacloud.core/ChangeLog
@@ -1,3 +1,11 @@
+2011-04-01  André Dietisheim  <André Dietisheim@adietisheim-thinkpad>
+
+	* src/org/jboss/tools/deltacloud/core/DeltaCloud.java 
+	(updateDriver): 
+	(isValid): 
+	(isKnownDriver):
+	[JBIDE-8668] updating driver state on each test if  driver is UNKNOWN
+
 2011-03-24  André Dietisheim  <André Dietisheim@adietisheim-thinkpad>
 
 	* src/org/jboss/tools/deltacloud/core/DeltaCloud.java 
