[JBIDE-8259] storing/restoring last used cloud name and username from preferences
git-svn-id: https://svn.jboss.org/repos/jbosstools/branches/jbosstools-3.2.x@30263 a97e2381-89e5-4abb-bab3-167db6db766c

--- a/deltacloud/plugins/org.jboss.tools.deltacloud.ui/ChangeLog
+++ b/deltacloud/plugins/org.jboss.tools.deltacloud.ui/ChangeLog
@@ -1,3 +1,22 @@
+2011-04-04  André Dietisheim  <André Dietisheim@adietisheim-thinkpad>
+
+	* src/org/jboss/tools/internal/deltacloud/ui/wizards/EditCloudConnectionWizard.java (performFinish): 
+	* src/org/jboss/tools/internal/deltacloud/ui/wizards/NewCloudConnectionWizard.java (performFinish): 
+	* src/org/jboss/tools/internal/deltacloud/ui/wizards/CloudConnectionPage.java (createControl): 
+	* src/org/jboss/tools/internal/deltacloud/ui/preferences/IPreferenceKeys.java 
+	(LAST_NAME): 
+	(LAST_USERNAME): 
+	[JBIDE-8259] storing/restoring last used cloud name and username from preferences
+
+2011-04-01  André Dietisheim  <André Dietisheim@adietisheim-thinkpad>
+
+	* plugin.xml: 
+	[JBIDE-8662] removed visibility rule for "Launch instance" in cloud viewer
+	* src/org/jboss/tools/internal/deltacloud/ui/wizards/CloudConnectionPageModel.java 
+	(prependHttp): 
+	(CloudConnectionPageModel): 
+	[JBIDE-8599] prepending "http://" if url is empty
+	
 2011-03-31  André Dietisheim  <André Dietisheim@adietisheim-thinkpad>
 
 	* src/org/jboss/tools/deltacloud/ui/commands/CreateInstanceFromAnyImageHandler.java: 
