--- a/bpel/plugins/org.eclipse.bpel.validator/src/org/eclipse/bpel/validator/rules/messages.properties
+++ b/bpel/plugins/org.eclipse.bpel.validator/src/org/eclipse/bpel/validator/rules/messages.properties
@@ -847,6 +847,17 @@ BPELC_XSD__INCOMPATIBLE_TYPE = The {1} "{2}" of type "{3}" is not \
  compatible with {4} "{5}" of type "{6}"
 BPELC_XSD__INCOMPATIBLE_TYPE.fix = Type must be compatible.
 #
+# ------------- Conflicting XSD type definitions ---------------------
+#  BPELC_UNKNOWN__ELEMENT
+#   {0}: node
+#   {1}: namespace URI
+#
+# https://issues.jboss.org/browse/JBIDE-8088
+BPELC_XSD__CONFLICTING_DEFINITION.summary = Conflicting XSD element <{0}> definitions.
+BPELC_XSD__CONFLICTING_DEFINITION = XSD element <{0}> in import {1} conflicts with element of the same name in {2}.
+BPELC_XSD__CONFLICTING_DEFINITION.fix = Resolve the conflict by removing the conflicting definitions, or ensuring that all definitions are identical.
+
+#
 #
 # -------------------- Copy ------------------------------------
 # BPELC_COPY__INCOMPATIBLE
