https://issues.jboss.org/browse/JBIDE-8305 added support for selecting an "element" for OnEvent handler
git-svn-id: https://svn.jboss.org/repos/jbosstools/trunk@30561 a97e2381-89e5-4abb-bab3-167db6db766c

--- a/bpel/plugins/org.eclipse.bpel.ui/src/org/eclipse/bpel/ui/messages.properties
+++ b/bpel/plugins/org.eclipse.bpel.ui/src/org/eclipse/bpel/ui/messages.properties
@@ -355,6 +355,9 @@ InvokeImplDetails_Operation__19=&Operation\:
 InvokeImplDetails_Partner__10=Par&tner Link\:
 InvokeImplDetails_Request_3_Plain=Request
 InvokeImplDetails_Response_4_Plain=Response
+InvokeImplDetails_MessageType=Message Type\:
+InvokeImplDetails_Element=Element\:
+InvokeImplDetails_MessageTypeOrElement=Message/Element\:
 InvokeImplSection_None_1=(none)
 InvokeImplSection_0=Create Global Partner Link.
 InvokeImplSection_1=Create Local Partner Link.
